Update and rename admin-iplay to index.html

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
     } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
     import { getAuth, signInWithEmailAndPassword, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyDZPIYOFtfmYEeeHGOCqzHsV1a206n0-cQ",
-      authDomain: "iplay-65220.firebaseapp.com",
-      projectId: "iplay-65220",
-      storageBucket: "iplay-65220.firebasestorage.app",
-      messagingSenderId: "264955612573",
-      appId: "1:264955612573:web:f5a8b2c548962f6b7d7374",
-      measurementId: "G-7MC7673WPH"
-    };
+   const firebaseConfig = {
+  apiKey: "AIzaSyC1M7rD0bTQQntGQoJJHdWjg_YXPlPgEvc",
+  authDomain: "bemorh-mobile.firebaseapp.com",
+  projectId: "bemorh-mobile",
+  storageBucket: "bemorh-mobile.firebasestorage.app",
+  messagingSenderId: "441143253921",
+  appId: "1:441143253921:web:548e18b87d8b4f9fd189e0",
+  measurementId: "G-8MHQ7590YX"
+};
 
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
