--- a/index.html
+++ b/index.html
@@ -289,10 +289,13 @@
 
     .product-grid { display: grid; gap: 15px; grid-template-columns: 1.5fr 1fr; align-items: start; }
     .img-preview {
-      width: 100%; max-width: 200px; height: auto;
-      border-radius: 8px; border: 1px solid #333; background: #fff; padding: 4px;
-      margin-top: 10px;
-    }
+  width: 100%; max-width: 200px; height: auto;
+  border-radius: 8px;
+  border: 1px solid #333;
+  padding: 4px;
+  margin-top: 10px;
+  background: transparent; /* remover background branco */
+}
 
     .upload-row { display: grid; grid-template-columns: 1fr; gap: 8px; }
     .upload-actions { display: flex; gap: 8px; flex-wrap: wrap; margin-top: 5px; }
@@ -307,13 +310,13 @@
       display: grid;
       gap: 10px;
     }
-    .promo-preview {
-      max-width: 100%;
-      border-radius: 8px;
-      border: 1px solid #333;
-      padding: 4px;
-      background: #fff;
-    }
+    promo-preview {
+  max-width: 100%;
+  border-radius: 8px;
+  border: 1px solid #333;
+  padding: 4px;
+  background: transparent; /* remover background branco */
+}
 
     .aside .card { position: static; }
     @media (min-width: 901px) {
@@ -667,29 +670,55 @@
     function escapeHtml(s) { return String(s || '').replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;'); }
     function escapeAttr(s) { return String(s || '').replace(/"/g,'&quot;'); }
 
-    function fileToDataUrlCompressed(file, maxSize = 800, quality = 0.8) {
-      return new Promise((resolve, reject) => {
-        const fr = new FileReader();
-        fr.onload = () => {
-          const img = new Image();
-          img.onload = () => {
-            let { width, height } = img;
-            const ratio = width / height;
-            if (width > height && width > maxSize) { width = maxSize; height = Math.round(maxSize / ratio); }
-            else if (height >= width && height > maxSize) { height = maxSize; width = Math.round(maxSize * ratio); }
-            const canvas = document.createElement('canvas');
-            canvas.width = width; canvas.height = height;
-            const ctx = canvas.getContext('2d');
-            ctx.fillStyle = '#ffffff';
-            ctx.fillRect(0, 0, width, height);
-            ctx.drawImage(img, 0, 0, width, height);
-            resolve(canvas.toDataURL('image/jpeg', quality));
-          };
-          img.onerror = reject;
-          img.src = fr.result;
-        };
-        fr.onerror = reject;
-        fr.readAsDataURL(file);
+   function fileToDataUrlCompressed(file, maxSize = 800, quality = 0.8) {
+  return new Promise((resolve, reject) => {
+    const fr = new FileReader();
+    fr.onload = () => {
+      const img = new Image();
+      img.onload = () => {
+        let { width, height } = img;
+        const ratio = width / height;
+        if (width > height && width > maxSize) { width = maxSize; height = Math.round(maxSize / ratio); }
+        else if (height >= width && height > maxSize) { height = maxSize; width = Math.round(maxSize * ratio); }
+
+        const canvas = document.createElement('canvas');
+        canvas.width = width; canvas.height = height;
+        const ctx = canvas.getContext('2d');
+
+        // Detectar tipo de saída: preserve alpha para PNG/WebP
+        let outMime = 'image/jpeg';
+        if (file && typeof file.type === 'string') {
+          const t = file.type.toLowerCase();
+          if (t === 'image/png') outMime = 'image/png';
+          else if (t === 'image/webp') outMime = 'image/webp';
+        }
+
+        // Se for JPEG, preencher o fundo com branco (JPEG não suporta alpha)
+        if (outMime === 'image/jpeg') {
+          ctx.fillStyle = '#ffffff';
+          ctx.fillRect(0, 0, width, height);
+        } else {
+          // para PNG/WebP, mantemos transparente: limpar canvas (por padrão transparente)
+          ctx.clearRect(0, 0, width, height);
+        }
+
+        ctx.drawImage(img, 0, 0, width, height);
+
+        // Gerar dataURL; PNG ignora quality; WebP e JPEG usam quality
+        try {
+          const dataUrl = canvas.toDataURL(outMime, outMime === 'image/png' ? undefined : quality);
+          resolve(dataUrl);
+        } catch (err) {
+          // fallback: tentar PNG
+          try { resolve(canvas.toDataURL('image/png')); } catch (e) { reject(e); }
+        }
+      };
+      img.onerror = reject;
+      img.src = fr.result;
+    };
+    fr.onerror = reject;
+    fr.readAsDataURL(file);
+
       });
     }
 
