--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
     import { getAuth, signInWithEmailAndPassword, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
 
-   const firebaseConfig = {
+    const firebaseConfig = {
   apiKey: "AIzaSyC1M7rD0bTQQntGQoJJHdWjg_YXPlPgEvc",
   authDomain: "bemorh-mobile.firebaseapp.com",
   projectId: "bemorh-mobile",
@@ -289,13 +289,10 @@
 
     .product-grid { display: grid; gap: 15px; grid-template-columns: 1.5fr 1fr; align-items: start; }
     .img-preview {
-  width: 100%; max-width: 200px; height: auto;
-  border-radius: 8px;
-  border: 1px solid #333;
-  padding: 4px;
-  margin-top: 10px;
-  background: transparent; /* remover background branco */
-}
+      width: 100%; max-width: 200px; height: auto;
+      border-radius: 8px; border: 1px solid #333; background: #fff; padding: 4px;
+      margin-top: 10px;
+    }
 
     .upload-row { display: grid; grid-template-columns: 1fr; gap: 8px; }
     .upload-actions { display: flex; gap: 8px; flex-wrap: wrap; margin-top: 5px; }
@@ -309,32 +306,14 @@
       margin-bottom: 12px;
       display: grid;
       gap: 10px;
-      
     }
-  /* Substitua o seletor incorreto `promo-preview { ... }` por este bloco */
-.promo-preview {
-  display: block;
-  width: 100%;         /* ocupa a largura do container */
-  height: auto;        /* escala mantendo proporção */
-  max-width: 100%;
-  max-height: 240px;   /* evita imagens muito altas que desconfiguram o layout */
-  object-fit: contain; /* mantém a imagem inteira sem cortar (muito útil para DataURLs) */
-  border-radius: 8px;
-  border: 1px solid #333;
-  padding: 4px;
-  background: transparent; /* remover background branco */
-}
-
-/* Evita que o item de promoção quebre o layout se a imagem for maior */
-.promo-item {
-  overflow: hidden;
-}
-
-/* Melhora a apresentação do campo URL dentro do card de promoção */
-.promo-item input[type="url"] {
-  width: 100%;
-  overflow-wrap: anywhere; /* faz o input quebrar URLs longas (DataURLs) visualmente */
-}
+    .promo-preview {
+      max-width: 100%;
+      border-radius: 8px;
+      border: 1px solid #333;
+      padding: 4px;
+      background: #fff;
+    }
 
     .aside .card { position: static; }
     @media (min-width: 901px) {
@@ -688,55 +667,29 @@
     function escapeHtml(s) { return String(s || '').replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;'); }
     function escapeAttr(s) { return String(s || '').replace(/"/g,'&quot;'); }
 
-   function fileToDataUrlCompressed(file, maxSize = 800, quality = 0.8) {
-  return new Promise((resolve, reject) => {
-    const fr = new FileReader();
-    fr.onload = () => {
-      const img = new Image();
-      img.onload = () => {
-        let { width, height } = img;
-        const ratio = width / height;
-        if (width > height && width > maxSize) { width = maxSize; height = Math.round(maxSize / ratio); }
-        else if (height >= width && height > maxSize) { height = maxSize; width = Math.round(maxSize * ratio); }
-
-        const canvas = document.createElement('canvas');
-        canvas.width = width; canvas.height = height;
-        const ctx = canvas.getContext('2d');
-
-        // Detectar tipo de saída: preserve alpha para PNG/WebP
-        let outMime = 'image/jpeg';
-        if (file && typeof file.type === 'string') {
-          const t = file.type.toLowerCase();
-          if (t === 'image/png') outMime = 'image/png';
-          else if (t === 'image/webp') outMime = 'image/webp';
-        }
-
-        // Se for JPEG, preencher o fundo com branco (JPEG não suporta alpha)
-        if (outMime === 'image/jpeg') {
-          ctx.fillStyle = '#ffffff';
-          ctx.fillRect(0, 0, width, height);
-        } else {
-          // para PNG/WebP, mantemos transparente: limpar canvas (por padrão transparente)
-          ctx.clearRect(0, 0, width, height);
-        }
-
-        ctx.drawImage(img, 0, 0, width, height);
-
-        // Gerar dataURL; PNG ignora quality; WebP e JPEG usam quality
-        try {
-          const dataUrl = canvas.toDataURL(outMime, outMime === 'image/png' ? undefined : quality);
-          resolve(dataUrl);
-        } catch (err) {
-          // fallback: tentar PNG
-          try { resolve(canvas.toDataURL('image/png')); } catch (e) { reject(e); }
-        }
-      };
-      img.onerror = reject;
-      img.src = fr.result;
-    };
-    fr.onerror = reject;
-    fr.readAsDataURL(file);
-
+    function fileToDataUrlCompressed(file, maxSize = 800, quality = 0.8) {
+      return new Promise((resolve, reject) => {
+        const fr = new FileReader();
+        fr.onload = () => {
+          const img = new Image();
+          img.onload = () => {
+            let { width, height } = img;
+            const ratio = width / height;
+            if (width > height && width > maxSize) { width = maxSize; height = Math.round(maxSize / ratio); }
+            else if (height >= width && height > maxSize) { height = maxSize; width = Math.round(maxSize * ratio); }
+            const canvas = document.createElement('canvas');
+            canvas.width = width; canvas.height = height;
+            const ctx = canvas.getContext('2d');
+            ctx.fillStyle = '#ffffff';
+            ctx.fillRect(0, 0, width, height);
+            ctx.drawImage(img, 0, 0, width, height);
+            resolve(canvas.toDataURL('image/jpeg', quality));
+          };
+          img.onerror = reject;
+          img.src = fr.result;
+        };
+        fr.onerror = reject;
+        fr.readAsDataURL(file);
       });
     }
 
